tests/fixtures/invalid/set_bitor_bool.py
# Cannot bitwise OR Set[int] and Bool
x: set[int] = {1, 2, 3} | True
